--- a/.github/workflows/export-databricks-s3.yml
+++ b/.github/workflows/export-databricks-s3.yml
@@ -12,16 +12,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Databricks CLI
-        run: |
-          pip install databricks-cli
+        run: pip install databricks-cli
 
-      - name: Configure Databricks CLI (new style)
+      - name: Configure Databricks CLI
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
           mkdir -p ~/.databricks
-          cat <<EOF > ~/.databricks/config
+          cat << 'EOF' > ~/.databricks/config
 [default]
 host = ${DATABRICKS_HOST}
 token = ${DATABRICKS_TOKEN}
